--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview"
-    "test": "jest"  // Added test script, mocha, 
+    "test": "jest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
