--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "globals": "^15.15.0",
     "jest": "^29.0.0",
     "eslint": "^8.0.0",
-    "webpack": "^5.0.0"
+    "webpack": "^5.0.0",
     "lovable-tagger": "^1.1.11",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
